--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.username=root
 spring.datasource.password=sumit123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #spring.jpa.hibernate.ddl-auto=update
+jwt.secret=JWTTOKEN123
